--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CONSUMER_KEY=
-CONSUMER_SECRET=
-ACCESS_TOKEN=
-ACCESS_TOKEN_SECRET=
+CONSUMER_KEY=tMUtfmALb18D8s4nct67kYgEi
+CONSUMER_SECRET=LLslmpFhXARFmtksB2hDVS0IaEbokvpkKJKMGByCOaaxtQkaNu
+ACCESS_TOKEN=1579834958813732870-lLpEtrrgpBT37N337Oyaq8sdY02jo4
+ACCESS_TOKEN_SECRET=kOCUXttUYhicPrCwIU45hG1SwvgztuMbWc4f5Lxs4VfB3
